test/files/pos/t8343.scala

trait T {
  def f = List[Int](??? : _*)
}
