test/files/neg/t12851b/T_1.scala

trait T1 {
  def f: Int
}
trait T2 {
  def f() = 42
}
